--- a/views/home.jade
+++ b/views/home.jade
@@ -32,7 +32,7 @@ html(lang='en')
                 c-6.1-0.2-11.7-1.8-16.7-4.6c0,0.2,0,0.3,0,0.5C7.2,69.7,20,84.6,36.9,88c-3.1,0.8-6.4,1.3-9.7,1.3c-2.4,0-4.7-0.2-6.9-0.7\
                 c4.7,14.6,18.3,25.3,34.5,25.6C42,124.1,26.1,130,8.8,130c-3,0-5.9-0.2-8.8-0.5C16.3,139.9,35.8,146,56.6,146\
                 c67.9,0,105.1-56.2,105.1-104.9c0-1.6,0-3.2-0.1-4.8C168.8,31.2,175,24.7,180,17.3z')
-              h1 @grattspore
+              h1 @#{screenName}
           .circle--fluid--cell.align-right
             nav
               ul.circle--inline
@@ -42,12 +42,13 @@ html(lang='en')
       form
         .circle--fluid
           .circle--fluid--cell.circle--fluid--primary.align-bottom.app--tweet--post
-            .app--avatar(style='background-image: url(images/m-spore.png)')
+            .app--avatar(style='background-image: url(#{avatar})')
               img(src='images/m-spore.png')
             textarea#tweet-textarea.circle--textarea--input(placeholder="What's happening?")
             strong#tweet-char.app--tweet--char 140
           .circle--fluid--cell.align-bottom
             button.button-primary Tweet
+            
     .bounds.app--body
       .app--section--header
         .grid-33
@@ -67,7 +68,7 @@ html(lang='en')
               li
                 strong.app--tweet--timestamp #{post.posted}
                 a.app--tweet--author
-                  .app--avatar(style='background-image: url(images/f-spore.png)')
+                  .app--avatar(style='background-image: url(#{post.avatar})')
                     img(src='images/f-spore.png')
                   h4 #{post.name}
                   |  @#{post.screenName}
@@ -90,98 +91,53 @@ html(lang='en')
                         path(d='M49.8,16.7c-0.4-1-1.5-1.7-2.6-1.7h-4.7V2.8c0-1.5-1.3-2.8-2.8-2.8H24.8C23.3,0,22,1.3,22,2.8s1.3,2.8,2.8,2.8h12.1v9.3\
                         h-4.7c-1.1,0-2.2,0.7-2.6,1.7c-0.4,1-0.2,2.3,0.6,3.1l7.5,7.5c0.5,0.5,1.3,0.8,2,0.8c0.7,0,1.4-0.3,2-0.8l7.5-7.5\
                         C50,18.9,50.2,17.7,49.8,16.7z')
-                      strong 75
+                      strong #{post.retweeted}
                   li
                     a.app--like
                       span.tooltip Like
                       svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 35 28', xml:space='preserve')
                         path.st0(d='M25.8,0c-3.6,0-6.8,2.1-8.3,5.1C16,2.1,12.9,0,9.2,0C4.1,0,0,4.1,0,9.2C0,21.4,17.3,28,17.3,28S35,21.3,35,9.2\
                         C35,4.1,30.9,0,25.8,0L25.8,0z')
-                      strong 12
+                      strong #{post.favorited}
       .grid-33
         .app--section
           ul.app--user--list
-            li
-              .circle--fluid
-                .circle--fluid--cell.circle--fluid--primary
-                  a.app--tweet--author
-                    .app--avatar(style='background-image: url(images/f-spore.png)')
-                      img(src='images/f-spore.png')
-                    h4 Jill Spore
-                    p @jillspore
-                .circle--fluid--cell
-                  a.button.button-text Unfollow
-            li
-              .circle--fluid
-                .circle--fluid--cell.circle--fluid--primary
-                  a.app--tweet--author
-                    .app--avatar(style='background-image: url(images/f-spore.png)')
-                      img(src='images/f-spore.png')
-                    h4 Jill Spore
-                    p @jillspore
-                .circle--fluid--cell
-                  a.button.button-text Unfollow
-            li
-              .circle--fluid
-                .circle--fluid--cell.circle--fluid--primary
-                  a.app--tweet--author
-                    .app--avatar(style='background-image: url(images/f-spore.png)')
-                      img(src='images/f-spore.png')
-                    h4 Jill Spore
-                    p @jillspore
-                .circle--fluid--cell
-                  a.button.button-text Unfollow
-            li
-              .circle--fluid
-                .circle--fluid--cell.circle--fluid--primary
-                  a.app--tweet--author
-                    .app--avatar(style='background-image: url(images/f-spore.png)')
-                      img(src='images/f-spore.png')
-                    h4 Jill Spore
-                    p @jillspore
-                .circle--fluid--cell
-                  a.button Follow
-            li
-              .circle--fluid
-                .circle--fluid--cell.circle--fluid--primary
-                  a.app--tweet--author
-                    .app--avatar(style='background-image: url(images/f-spore.png)')
-                      img(src='images/f-spore.png')
-                    h4 Jill Spore
-                    p @jillspore
-                .circle--fluid--cell
-                  a.button.button-text Unfollow
+            each friend in friends
+              li
+                .circle--fluid
+                  .circle--fluid--cell.circle--fluid--primary
+                    a.app--tweet--author
+                      .app--avatar(style='background-image: url(#{friend.avatar})')
+                        img(src='images/f-spore.png')
+                      h4 #{friend.name}
+                      p @#{friend.screenName}
+                  .circle--fluid--cell
+                    a.button.button-text Unfollow
+
       .grid-33
         .app--section
           ul.app--message--list
             li
               h3
                 | Conversation with
-                a Jill Spore
+                a #{' ' + latestChat}
+
               ul.app--message--conversation
-                li.app--message
-                  .app--avatar(style='background-image: url(images/f-spore.png)')
-                    img(src='images/f-spore.png')
-                  p.app--message--text How are things?
-                  p.app--message--timestamp 3 hours ago
-                li.app--message--me
-                  .app--avatar(style='background-image: url(images/m-spore.png)')
-                    img(src='images/m-spore.png')
-                  p.app--message--text
-                    | Great! How about you? Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  p.app--message--timestamp 2 hours ago
-                li.app--message
-                  .app--avatar(style='background-image: url(images/f-spore.png)')
-                    img(src='images/f-spore.png')
-                  p.app--message--text Fantastic! You wanna grab lunch?
-                  p.app--message--timestamp 2 hours ago
-                li.app--message--me
-                  .app--avatar(style='background-image: url(images/m-spore.png)')
-                    img(src='images/m-spore.png')
-                  p.app--message--text Totes mcgotes. How about Mackey's?
-                  p.app--message--timestamp 1 hour ago
-                li.app--message
-                  .app--avatar(style='background-image: url(images/f-spore.png)')
-                    img(src='images/f-spore.png')
-                  p.app--message--text Aww yeah.. I'm craving a Triple Quarter Mack!
-                  p.app--message--timestamp 1 hour ago
+
+                each message in messages
+
+                  if screenName === message.recipient
+
+                    li.app--message
+                      .app--avatar(style='background-image: url(#{message.avatar})')
+                        img(src='images/f-spore.png')
+                      p.app--message--text #{message.text}
+                      p.app--message--timestamp #{message.posted}
+
+                  if screenName !== message.recipient
+
+                    li.app--message--me
+                      .app--avatar(style='background-image: url(#{message.avatar})')
+                        img(src='images/m-spore.png')
+                      p.app--message--text #{message.text}
+                      p.app--message--timestamp #{message.posted}
