--- a/views/home.jade
+++ b/views/home.jade
@@ -1,69 +1,56 @@
-doctype html
-html(lang='en')
-  head
-    //
-      Basic Page Needs
-      ––––––––––––––––––––––––––––––––––––––––––––––––––
-    meta(charset='utf-8')
-    title Twitter Client
-    meta(name='description', content='')
-    meta(name='author', content='')
-    //
-      Mobile Specific Metas
-      ––––––––––––––––––––––––––––––––––––––––––––––––––
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    //
-      FONTS
-      ––––––––––––––––––––––––––––––––––––––––––––––––––
-    link(href='https://fonts.googleapis.com/css?family=Work+Sans:400,600', rel='stylesheet', type='text/css')
-    //
-      CSS
-      ––––––––––––––––––––––––––––––––––––––––––––––––––
-    link(rel='stylesheet', href='css/global.css')
-  body
-    header.circle--header
-      .bounds
-        .circle--fluid
-          .circle--fluid--cell
-            a.logo(href='index.html')
-              svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 180 146', xml:space='preserve')
-                path(d='M180,17.3c-6.6,2.9-13.7,4.9-21.2,5.8c7.6-4.6,13.5-11.8,16.2-20.4c-7.1,4.2-15,7.3-23.5,8.9C144.8,4.5,135.2,0,124.6,0\
-                c-20.4,0-36.9,16.5-36.9,36.9c0,2.9,0.3,5.7,1,8.4C58,43.7,30.8,29,12.5,6.7c-3.2,5.4-5,11.8-5,18.5C7.5,38.1,14.1,49.3,24,56\
-                c-6.1-0.2-11.7-1.8-16.7-4.6c0,0.2,0,0.3,0,0.5C7.2,69.7,20,84.6,36.9,88c-3.1,0.8-6.4,1.3-9.7,1.3c-2.4,0-4.7-0.2-6.9-0.7\
-                c4.7,14.6,18.3,25.3,34.5,25.6C42,124.1,26.1,130,8.8,130c-3,0-5.9-0.2-8.8-0.5C16.3,139.9,35.8,146,56.6,146\
-                c67.9,0,105.1-56.2,105.1-104.9c0-1.6,0-3.2-0.1-4.8C168.8,31.2,175,24.7,180,17.3z')
-              h1 @#{screenName}
-          .circle--fluid--cell.align-right
-            nav
-              ul.circle--inline
-                li
-                  a Sign Out
-    .app--tweet
-      form
-        .circle--fluid
-          .circle--fluid--cell.circle--fluid--primary.align-bottom.app--tweet--post
-            .app--avatar(style='background-image: url(#{avatar})')
-              img(src='images/m-spore.png')
-            textarea#tweet-textarea.circle--textarea--input(placeholder="What's happening?")
-            strong#tweet-char.app--tweet--char 140
-          .circle--fluid--cell.align-bottom
-            button.button-primary Tweet
-            
-    .bounds.app--body
-      .app--section--header
-        .grid-33
-          .app--section--heading
-            h2 Timeline
-        .grid-33
-          .app--section--heading
-            strong 129
-            h2 Following
-        .grid-33
-          .app--section--heading
-            h2 Direct Messages
+extends layout
+
+block title
+  include title
+
+block content
+  header.circle--header(style="background-image:url(#{bg});background-size:cover")
+    .bounds
+      .circle--fluid
+        .circle--fluid--cell
+          a.logo(href='index.html')
+            svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 180 146', xml:space='preserve')
+              path(d='M180,17.3c-6.6,2.9-13.7,4.9-21.2,5.8c7.6-4.6,13.5-11.8,16.2-20.4c-7.1,4.2-15,7.3-23.5,8.9C144.8,4.5,135.2,0,124.6,0\
+              c-20.4,0-36.9,16.5-36.9,36.9c0,2.9,0.3,5.7,1,8.4C58,43.7,30.8,29,12.5,6.7c-3.2,5.4-5,11.8-5,18.5C7.5,38.1,14.1,49.3,24,56\
+              c-6.1-0.2-11.7-1.8-16.7-4.6c0,0.2,0,0.3,0,0.5C7.2,69.7,20,84.6,36.9,88c-3.1,0.8-6.4,1.3-9.7,1.3c-2.4,0-4.7-0.2-6.9-0.7\
+              c4.7,14.6,18.3,25.3,34.5,25.6C42,124.1,26.1,130,8.8,130c-3,0-5.9-0.2-8.8-0.5C16.3,139.9,35.8,146,56.6,146\
+              c67.9,0,105.1-56.2,105.1-104.9c0-1.6,0-3.2-0.1-4.8C168.8,31.2,175,24.7,180,17.3z')
+            h1 @#{screenName}
+        .circle--fluid--cell.align-right
+          nav
+            ul.circle--inline
+              li
+                a Sign Out
+
+  .app--tweet
+    form(method="post", action="/")
+      .circle--fluid
+        .circle--fluid--cell.circle--fluid--primary.align-bottom.app--tweet--post
+          .app--avatar(style='background-image: url(#{avatar})')
+            img(src='images/m-spore.png')
+          textarea#tweet-textarea.circle--textarea--input(placeholder="What's happening?", name="tweet")
+          strong#tweet-char.app--tweet--char
+        .circle--fluid--cell.align-bottom
+          button#tweet-status.button-primary(type="submit") Tweet
+
+  .bounds.app--body
+    .app--section--header
       .grid-33
-        .app--section
-          ul.app--tweet--list
+        .app--section--heading
+          h2 Timeline
+      .grid-33
+        .app--section--heading
+          strong 129
+          h2 Following
+      .grid-33
+        .app--section--heading
+          h2 Direct Messages
+    .grid-33
+      .app--section
+        ul.app--tweet--list
+
+          if timeline.length > 0
+
             each post in timeline
               li
                 strong.app--tweet--timestamp #{post.posted}
@@ -99,9 +86,18 @@ html(lang='en')
                         path.st0(d='M25.8,0c-3.6,0-6.8,2.1-8.3,5.1C16,2.1,12.9,0,9.2,0C4.1,0,0,4.1,0,9.2C0,21.4,17.3,28,17.3,28S35,21.3,35,9.2\
                         C35,4.1,30.9,0,25.8,0L25.8,0z')
                       strong #{post.favorited}
-      .grid-33
-        .app--section
-          ul.app--user--list
+
+          else
+            li
+              h3
+                | Your timeline is empty.
+
+    .grid-33
+      .app--section
+        ul.app--user--list
+
+          if friends.length > 0
+
             each friend in friends
               li
                 .circle--fluid
@@ -114,30 +110,41 @@ html(lang='en')
                   .circle--fluid--cell
                     a.button.button-text Unfollow
 
-      .grid-33
-        .app--section
-          ul.app--message--list
+          else
             li
               h3
+                | You are not following anyone.
+
+
+    .grid-33
+      .app--section
+        ul.app--message--list
+          li
+            h3
+
+              if latestChat
                 | Conversation with
-                a #{' ' + latestChat}
+                a #{' ' + latestChat}.
 
-              ul.app--message--conversation
+              else
+                | No active conversations.
 
-                each message in messages
+            ul.app--message--conversation
 
-                  if screenName === message.recipient
+              each message in messages
 
-                    li.app--message
-                      .app--avatar(style='background-image: url(#{message.avatar})')
-                        img(src='images/f-spore.png')
-                      p.app--message--text #{message.text}
-                      p.app--message--timestamp #{message.posted}
+                if screenName === message.recipient
 
-                  if screenName !== message.recipient
+                  li.app--message
+                    .app--avatar(style='background-image: url(#{message.avatar})')
+                      img(src='images/f-spore.png')
+                    p.app--message--text #{message.text}
+                    p.app--message--timestamp #{message.posted}
 
-                    li.app--message--me
-                      .app--avatar(style='background-image: url(#{message.avatar})')
-                        img(src='images/m-spore.png')
-                      p.app--message--text #{message.text}
-                      p.app--message--timestamp #{message.posted}
+                if screenName !== message.recipient
+
+                  li.app--message--me
+                    .app--avatar(style='background-image: url(#{message.avatar})')
+                      img(src='images/m-spore.png')
+                    p.app--message--text #{message.text}
+                    p.app--message--timestamp #{message.posted}
